--- a/templates/index.html
+++ b/templates/index.html
@@ -9,23 +9,12 @@
       style="max-height: 400px; overflow: hidden;">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="{{ url_for('static', filename='images/dark_sister_0.png') }}" class="d-block w-100"
-            style="height: 200px; object-fit: cover;" alt="The Dark Sister">
-          <div class="carousel-caption d-none d-md-block">
-            <h5 style="color: black;">The Dark Sister</h5>
-            <p style="color: black;">Visenya Targaryen là một chiến binh vĩ đại. Bà có một thanh kiếm thép Valyrian mà
-              bà gọi là 'Dark
-              Sister'.</p>
-          </div>
+          <img src="{{ url_for('static', filename='images/slider1.jpg') }}" class="d-block w-100"
+            style="height: 200px; object-fit: cover;" alt="slider1">
         </div>
         <div class="carousel-item">
-          <img src="{{ url_for('static', filename='images/daemon_armor.jpg') }}" class="d-block w-100"
-            style="height: 200px; object-fit: cover;" alt="Daemon Targaryen armor">
-          <div class="carousel-caption d-none d-md-block">
-            <h5 style="color: rgb(247, 0, 0);">Daemon Targaryen armor</h5>
-            <p style="color: rgb(247, 0, 0);">Màu bạc sáng, trang trí với các họa tiết rồng vàng và các họa tiết hình
-              lửa.</p>
-          </div>
+          <img src="{{ url_for('static', filename='images/slider2.jpg') }}" class="d-block w-100"
+            style="height: 200px; object-fit: cover;" alt="slider2">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
